deploy/k8s/go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-svc
  labels:
    app: user-service
spec:
  ports:
    - port: 9001
  type: ClusterIP
  selector:
    app: user-service
