deploy/k8s/go-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: website-ingress.local
      http:
        paths:
          - backend:
              serviceName: user-service
              servicePort: 9001
